kustomize/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsgradient-api-deployment
  labels:
    app: newsgradient-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newsgradient-api
  template:
    metadata:
      labels:
        app: newsgradient-api
    spec:
      volumes:
        - name: newsgradient-api-persistent-storage
          persistentVolumeClaim:
            claimName: newsgradient-api-pvc
      containers:
        - name: newsgradient-api
          image: newsgradient-api
          volumeMounts:
            - name: newsgradient-api-persistent-storage
              mountPath: /pvc
          command:
            - gunicorn
            - newsgradient.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
          ports:
            - containerPort: 8000
        - name: newsgradient-api-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: newsgradient-api-persistent-storage
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: 2Gi
              cpu: 1000m
            limits:
              memory: 2Gi
              cpu: 1000m
