kustomize/api/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://newsgradient-api.danesjenovdan.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsgradient-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - newsgradient-api.danesjenovdan.si
      secretName: newsgradient-api-tls
  rules:
    - host: newsgradient-api.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newsgradient-api
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsgradient-api-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: newsgradient-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.newsgradient-api.danesjenovdan.si
      secretName: newsgradient-api-nginx-tls
  rules:
    - host: files.newsgradient-api.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newsgradient-api-nginx
                port:
                  number: 80
